Develop (#13)
This pull request refactors the memory pressure simulation and GC monitoring infrastructure to achieve production-grade performance and high-fidelity HFT workload simulation.

  Key Changes

   * Parallel Memory Pressure: Leverages Jakarta Concurrency 3.1 and Virtual Threads to parallelize garbage generation, overcoming single-threaded bandwidth bottlenecks and achieving the target 4.0 GB/sec
     throughput in EXTREME mode.
   * HFT Allocation Patterns: Implements a Strategy-based simulation registry featuring domain-specific patterns (OrderBook, MarketTick, MarketDepth) that create realistic, hierarchical object graphs instead of
     primitive arrays.
   * Coordinated Bursts: Introduced timed allocation spikes (3x multiplier) to simulate market events like flash crashes and news-driven volume surges.
   * GC Phase Observability: Enhanced GCStatsService to decompose pause times into constituent phases (e.g., Mark, Relocate), providing percentile-based statistics for deeper collector analysis.
   * Documentation Refactoring: Updated README.md to reflect the new architecture and transitioned to a direct, technical tone suitable for a reference implementation.