@@ -9,6 +9,7 @@ import jakarta.enterprise.concurrent.ManagedExecutorService;
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
 import java.util.List;
+import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.concurrent.Future;
 import java.util.concurrent.ThreadLocalRandom;
@@ -28,7 +29,7 @@ public class MemoryPressureService {
   private volatile boolean running = false;
   private Future<?> pressureTask;
 
-  private long totalBytesAllocated = 0;
+  private final AtomicLong totalBytesAllocated = new AtomicLong(0);
   private long lastStatsTime = System.currentTimeMillis();
 
   private final List<byte[]> tenuredObjects = new CopyOnWriteArrayList<>();
@@ -71,7 +72,7 @@ public class MemoryPressureService {
     }
 
     running = true;
-    totalBytesAllocated = 0;
+    totalBytesAllocated.set(0);
     lastStatsTime = System.currentTimeMillis();
 
     pressureTask =
@@ -81,6 +82,7 @@ public class MemoryPressureService {
 
               while (running) {
                 try {
+                  long loopStartTime = System.currentTimeMillis();
                   AllocationMode mode = currentMode;
                   if (mode == AllocationMode.OFF) {
                     break;
@@ -88,7 +90,12 @@ public class MemoryPressureService {
 
                   generateGarbage(mode);
 
-                  Thread.sleep(100);
+                  long executionTime = System.currentTimeMillis() - loopStartTime;
+                  long sleepTime = 100 - executionTime;
+
+                  if (sleepTime > 0) {
+                    Thread.sleep(sleepTime);
+                  }
 
                   logStats();
 
@@ -118,7 +125,7 @@ public class MemoryPressureService {
 
     // Burst detection for HIGH and EXTREME modes (simulates market events)
     boolean inBurst = false;
-    if (mode == AllocationMode.HIGH || mode == AllocationMode.EXTREME) {
+    if (mode != AllocationMode.OFF) {
       long now = System.currentTimeMillis();
       if (now - lastBurstTime >= BURST_INTERVAL_MS) {
         inBurst = true;
@@ -130,24 +137,39 @@ public class MemoryPressureService {
       }
     }
 
-    int allocations = inBurst ? baseAllocations * BURST_MULTIPLIER : baseAllocations;
+    int totalAllocations = inBurst ? baseAllocations * BURST_MULTIPLIER : baseAllocations;
 
-    // HFT pattern-based allocation (order books, ticks, depth snapshots)
-    for (int i = 0; i < allocations; i++) {
-      try {
-        AllocationPattern pattern = patternRegistry.selectPattern();
-        Object allocated = pattern.allocate(bytesPerAlloc);
-        // Object becomes garbage after this scope - GC will collect it
-      } catch (Exception e) {
-        LOGGER.warning("Pattern allocation failed: " + e.getMessage());
-      }
+    // Parallelize allocation using virtual threads
+    int numTasks = 4;
+    int allocationsPerTask = totalAllocations / numTasks;
+    CompletableFuture<?>[] futures = new CompletableFuture[numTasks];
 
-      totalBytesAllocated += bytesPerAlloc;
+    for (int t = 0; t < numTasks; t++) {
+      final int taskAllocations =
+          (t == numTasks - 1)
+              ? totalAllocations - (allocationsPerTask * (numTasks - 1))
+              : allocationsPerTask;
+
+      futures[t] =
+          CompletableFuture.runAsync(
+              () -> {
+                for (int i = 0; i < taskAllocations; i++) {
+                  try {
+                    AllocationPattern pattern = patternRegistry.selectPattern();
+                    pattern.allocate(bytesPerAlloc);
+                  } catch (Exception e) {
+                    // Fail silently in parallel task to avoid flooding logs
+                  }
+                  totalBytesAllocated.addAndGet(bytesPerAlloc);
+                }
+              },
+              executorService);
     }
 
-    // Tenured object promotion logic (unchanged - forces old-gen pressure)
+    CompletableFuture.allOf(futures).join();
+
     if (mode == AllocationMode.HIGH || mode == AllocationMode.EXTREME) {
-      int chance = (mode == AllocationMode.EXTREME) ? 10 : 2;
+      int chance = (mode == AllocationMode.EXTREME) ? 100 : 20;
       if (ThreadLocalRandom.current().nextInt(10000) < chance) {
         byte[] longLived = new byte[1024 * 1024];
         ThreadLocalRandom.current().nextBytes(longLived);
@@ -160,7 +182,7 @@ public class MemoryPressureService {
     if (mode == AllocationMode.HIGH || mode == AllocationMode.EXTREME) {
       while (tenuredBytesAllocated.get() > TENURED_TARGET_MB * 1024L * 1024L) {
         if (!tenuredObjects.isEmpty()) {
-          tenuredObjects.remove(0);
+          tenuredObjects.removeFirst();
           tenuredBytesAllocated.addAndGet(-1024 * 1024);
         } else {
           break;
@@ -178,14 +200,14 @@ public class MemoryPressureService {
     long now = System.currentTimeMillis();
     if (now - lastStatsTime >= 5000) {
       double elapsedSeconds = (now - lastStatsTime) / 1000.0;
-      double mbPerSec = (totalBytesAllocated / (1024.0 * 1024.0)) / elapsedSeconds;
+      long allocated = totalBytesAllocated.getAndSet(0);
+      double mbPerSec = (allocated / (1024.0 * 1024.0)) / elapsedSeconds;
 
       LOGGER.info(
           String.format(
               "Memory Pressure Stats - Mode: %s | Allocated: %.2f MB/sec | Tenured: %d MB (%d objects)",
               currentMode, mbPerSec, getTenuredObjectsMB(), getTenuredObjectCount()));
 
-      totalBytesAllocated = 0;
       lastStatsTime = now;
     }
   }
